<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="salacima.ec.edu.ups.est.salamultisensorial.presentation.About">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about1"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="274dp"
        android:textSize="@dimen/size_text_middle"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about2"
        android:textSize="@dimen/size_text_middle"
        tools:layout_editor_absoluteX="317dp"
        tools:layout_editor_absoluteY="342dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about3"
        android:textSize="@dimen/size_text_middle"
        tools:layout_editor_absoluteX="263dp"
        tools:layout_editor_absoluteY="416dp" />

</android.support.constraint.ConstraintLayout>
