<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="salacima.ec.edu.ups.est.salamultisensorial.presentation.ListModules"
    android:background="@drawable/lista_modulos"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/btnsalir"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="112dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnListModuleBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ico_back"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="82dp"
        android:layout_marginTop="71dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:id="@+id/lbSeleccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="20dp"
                android:textColor="@color/negro"
                tools:layout_constraintTop_creator="1"
                android:layout_marginStart="359dp"
                android:layout_marginTop="88dp"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/chbMod1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/chb_mod1"
                android:textSize="@dimen/size_text_list_modules"
                android:textColor="@color/negro"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/chbMod2"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/chbMod2" />

            <CheckBox
                android:id="@+id/chbMod2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chb_mod2"
                android:textSize="@dimen/size_text_list_modules"
                android:textColor="@color/negro"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/chbMod5"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/chbMod5" />

            <CheckBox
                android:id="@+id/chbMod3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chb_mod3"
                android:textSize="@dimen/size_text_list_modules"
                android:textColor="@color/negro"
                tools:layout_constraintTop_creator="1"
                tools:layout_constraintRight_creator="1"
                android:layout_marginEnd="30dp"
                app:layout_constraintRight_toRightOf="@+id/lbSeleccion"
                android:layout_marginTop="27dp"
                app:layout_constraintTop_toBottomOf="@+id/lbSeleccion" />

            <CheckBox
                android:id="@+id/chbMod4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chb_mod4"
                android:textSize="@dimen/size_text_list_modules"
                android:textColor="@color/negro"
                tools:layout_constraintTop_creator="1"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/chbMod3"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/chbMod3"
                android:layout_marginLeft="2dp" />

            <CheckBox
                android:id="@+id/chbMod5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chb_mod5"
                android:textSize="@dimen/size_text_list_modules"
                android:textColor="@color/negro"
                tools:layout_constraintTop_creator="1"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/chbMod4"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/chbMod4"
                android:layout_marginLeft="0dp" />



        <ImageButton
            android:background="@drawable/ico_button_next"
            android:id="@+id/btnModuloSelected"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionN"
            android:textSize="20dp"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/chbMod2"
            android:layout_marginStart="75dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/chbMod2" />


</android.support.constraint.ConstraintLayout>
